--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DISCORD_T = \\ADD YOUR DICSORD TOKEN HERE\\
+DISCORD_T = MTAxOTEyMTkzNTUyMDYzMjg1Mw.GwzE-C.z10KBb-fVWqi5xjLilfGCjkrwqIynLEvT-lcgc
 PREFIX = T
