--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DISCORD_T = ODM5NDQ5OTk0MDU4NTMwODU2.YJJ0ug.0ajZc_sPrIaYOy2PD1VA2E_551U
+DISCORD_T = MTAxOTEyMTkzNTUyMDYzMjg1Mw.Goc0a_.lsRiS3UiOR5bqP9ex0iJfzeEcSNCuLxDL08W-k
 PREFIX = F
